# stats

./: .gitignore  CMakeLists.txt  README.md  format.sh
cmake/: Rmath-CMakeLists.txt.in  StatsConfig.cmake.in
examples/: CMakeLists.txt  lmfit.cc  rmath_qbeta.cc
include/slab/: stats.h
include/slab/stats/: distn.h  lm.h  mathlib.h  mathlib.h~  rmath.h
src/: library.h  main.cc
